# Realm

./: Cargo.toml
.github/workflows/: rust.yml
api/: Cargo.toml
api/src/: config.rs  lib.rs  router.rs  state.rs
api/src/config/: config.lua
api/src/handler/: mod.rs
api/src/middleware/: mod.rs
api/src/models/: message.rs  mod.rs
api/src/router/: mod.rs
api/src/services/: mod.rs  socket_chat.rs  user.rs
entity/: Cargo.toml
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
openapi/: openapi.yaml
realm-api/src/: config.rs  db.rs
realm-api/src/router/: mod.rs
src/: config.rs  db.rs  main.rs  router.rs  state.rs
src/handler/: mod.rs  user_handler.rs
src/middleware/: basic_auth.rs
src/models/: mod.rs  user.rs
