[package]
name = "realm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
  ".", 
  "realm-api", 
  # "service", 
  "entity", 
  "migration"
]

[dependencies]
realm-api = { path = "realm-api" }
